--- a/app/src/test/resources/fixtures/test.html
+++ b/app/src/test/resources/fixtures/test.html
@@ -7,7 +7,9 @@
     <title>Test Title</title>
 </head>
 <body>
+<div>
     <h1>Test Page Analyzer</h1>
     <p>Page Analyzer is a website that analyzes the specified pages for SEO suitability.</p>
+</div>
 </body>
 </html>
